--- a/RabbitSchedulerTest/RabbitSchedulerTest.csproj
+++ b/RabbitSchedulerTest/RabbitSchedulerTest.csproj
@@ -11,7 +11,10 @@
       <PackageReference Include="Akka" Version="1.5.7" />
       <PackageReference Include="Akka.Hosting" Version="1.5.7" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-      <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\rabbitmq-dotnet-client\projects\RabbitMQ.Client\RabbitMQ.Client.csproj" />
     </ItemGroup>
 
 </Project>
